--- a/css/style.css
+++ b/css/style.css
@@ -407,7 +407,7 @@ p {
 .section-subtitle {
   text-align: center;
   font-size: 1.3rem;
-  color: #D1D5DB;
+  color: #000000;
   margin-bottom: 3rem;
 }
 
